// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SVG Icon Normal 1`] = `
.c0 {
  -webkit-transition: width 0.15s ease;
  transition: width 0.15s ease;
  box-sizing: content-box;
  width: 24px;
  height: 24px;
  color: #000;
  opacity: 0.8;
}

.c0 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c0:hover {
  color: #000;
  opacity: 1;
}

.c0:active {
  color: #000;
  opacity: 1;
}

<span
  className="c0"
  color="#000"
  size={24}
>
  <svg
    data-file-name="SvgMail"
  />
</span>
`;

exports[`Storyshots SVG Icon With Height And Width 1`] = `
.c0 {
  -webkit-transition: width 0.15s ease;
  transition: width 0.15s ease;
  box-sizing: content-box;
  width: 24px;
  height: 24px;
  color: #000;
  opacity: 0.8;
}

.c0 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c0:hover {
  color: #000;
  opacity: 1;
}

.c0:active {
  color: #000;
  opacity: 1;
}

<span
  className="c0"
  color="#000"
  height={24}
  size={16}
  width={24}
>
  <svg
    data-file-name="SvgMail"
  />
</span>
`;

exports[`Storyshots SVG Icon With Many Transitions 1`] = `
.c0 {
  -webkit-transition: width 0.15s ease,height 0.15s ease;
  transition: width 0.15s ease,height 0.15s ease;
  box-sizing: content-box;
  width: 24px;
  height: 24px;
  color: #000;
  opacity: 0.8;
}

.c0 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c0:hover {
  color: #000;
  opacity: 1;
}

.c0:active {
  color: #000;
  opacity: 1;
}

<span
  className="c0"
  color="#000"
  size={24}
>
  <svg
    data-file-name="SvgMail"
  />
</span>
`;
